# pangofc

./: Cargo.toml  Gir.toml
pangofc-sys/: Cargo.toml  Gir.toml  build.rs
pangofc-sys/src/: lib.rs
pangofc-sys/tests/: abi.rs  constant.c  layout.c  manual.h
src/: lib.rs
src/auto/: font_map.rs  mod.rs  versions.txt
