[package]
name = "pangofc"
version = "0.1.0"
authors = ["Velislava Yanchina <vel.yanchina@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.pango-fc-sys]
path = "./pangofc-sys"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys" 

[dependencies.servo-fontconfig]
git = "https://github.com/servo/rust-fontconfig"
