[package]
name = "pango-fc-sys"
version = "0.0.1"
links = "pango_fc"
build = "build.rs"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "pango_fc_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.servo-fontconfig]
git = "https://github.com/servo/rust-fontconfig"

[build-dependencies]
pkg-config = "0.3.7"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
